--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sonneneinstrahlung</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=2" type="text/javascript"></script>
     <script src="js/index.js?version=18" type="text/javascript"></script>
 </head>
