--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -10,19 +10,36 @@
 <body>
     <button id="click_button">Suche</button>
     <button id="logout_button">Abmelden</button>
-    <table border="1" cellpadding="5" cellspacing="5">
+<table>
+    <thead>
         <tr>
-            <th>Name</th>
-            <th>Salary</th>
+          <th></th>
+          <th>Haus A</th>
+          <th>Haus B</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+          <th>Wohnfläche</th>
+          <td>100</td>
+          <td>150</td>
         </tr>
         <tr>
-            <td>Ramesh Raman</td>
-            <td>5000</td>
+          <th>Gartenfläche</th>
+          <td>50</td>
+          <td>100</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+          <th>Gesamtfläche</th>
+          <td>150</td>
+          <td>250</td>
         </tr>
         <tr>
-            <td>Shabbir Hussein</td>
-            <td>7000</td>
+          <td colspan="3">Alle Angaben in Quadratmetern.</td>
         </tr>
-    </table>
+    </tfoot>
+</table>
 </body>
 </html>
