--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -10,36 +10,32 @@
 <body>
     <button id="click_button">Suche</button>
     <button id="logout_button">Abmelden</button>
-<table>
-    <thead>
-        <tr>
-          <th></th>
-          <th>Haus A</th>
-          <th>Haus B</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-          <th>Wohnfläche</th>
-          <td>100</td>
-          <td>150</td>
-        </tr>
-        <tr>
-          <th>Gartenfläche</th>
-          <td>50</td>
-          <td>100</td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-          <th>Gesamtfläche</th>
-          <td>150</td>
-          <td>250</td>
-        </tr>
-        <tr>
-          <td colspan="3">Alle Angaben in Quadratmetern.</td>
-        </tr>
-    </tfoot>
-</table>
+    <table>
+        <thead>
+            <tr>
+              <th>Datum</th>
+              <th>Wert</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td>100</td>
+              <td>150</td>
+            </tr>
+            <tr>
+              <td>50</td>
+              <td>100</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+              <td>150</td>
+              <td>250</td>
+            </tr>
+            <tr>
+              <td colspan="3">Alle Angaben in Quadratmetern.</td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
