--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <button id="click_button">Suche</button>
+    <button id="export_button">Export</button>
     <button id="logout_button">Abmelden</button>
     <table>
         <thead>
