--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -5,6 +5,7 @@
     <title>Sonneneinstrahlung</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=6" type="text/javascript"></script>
+    <script src="js/jquery.fileDownload.js?version=1" type="text/javascript"></script>
     <script src="js/app.js?version=2" type="text/javascript"></script>
 </head>
 <body>
