--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -5,13 +5,13 @@
     <title>Sonneneinstrahlung</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=10" type="text/javascript"></script>
-    <script src="js/index.js?version=20" type="text/javascript"></script>
+    <script src="js/login.js?version=20" type="text/javascript"></script>
 </head>
 <body>
 Bitte anmelden:
 <br>
-<input id="username" placeholder="Benutzername" type="text">
-<input id="password" placeholder="Passwort" type="text">
+<input id="username" type="text" value="user">
+<input id="password" type="text" value="abc123">
 <button id="login_button">Anmelden</button>
 </body>
 </html>
