--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -21,5 +21,7 @@
 <button id="search_button">Suche</button>
 <button id="export_button">Export</button>
 <button id="logout_button">Abmelden</button>
+<br>
+<table id="records_table"></table>
 </body>
 </html>
