--- a/src/main/resources/static/html/accessDenied.html
+++ b/src/main/resources/static/html/accessDenied.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Sonneneinstrahlung</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=6" type="text/javascript"></script>
     <script src="js/accessDenied.js?version=3" type="text/javascript"></script>
 </head>
 <body>
+<header>
+    <p>Sonneneinstrahlung</p>
+</header>
 Zugriff verweigert :-(
 <br>
 <button id="back_button">Zurück</button>
