--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -2,26 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Sonneneinstrahlung</title>
+    <link href="css/style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <script src="js/master.js?version=10" type="text/javascript"></script>
-    <script src="js/app.js?version=14" type="text/javascript"></script>
+    <script src="js/master.js?version=10" type="text/javascript" type="text/javascript"></script>
+    <script src="js/app.js?version=14" type="text/javascript" type="text/javascript"></script>
 </head>
 <body>
-<label for="start_date">Von:</label>
-<input id="start_date" type="text" value="201801">
-<label for="end_date">bis:</label>
-<input id="end_date" type="text" value="201812">
-<label for="lat">Lat:</label>
-<input id="lat" type="text" value="51.2">
+<header>
+    <p>Sonneneinstrahlung</p>
+</header>
+<form autocomplete="off">
+    <div class="autocomplete">
+        <label for="start_date">Von:</label>
+        <input id="start_date" type="text" value="2018-01">
+    </div>
+</form>
+<form autocomplete="off">
+    <div class="autocomplete">
+        <label for="end_date">Bis:&nbsp;</label>
+        <input id="end_date" type="text" value="2018-12">
+    </div>
+</form>
+<div>
+    <label for="lat">Lat:&nbsp;</label>
+    <input id="lat" step="0.001" type="number" value="51.256">
+</div>
 <label for="lon">Lon:</label>
-<input id="lon" type="text" value="9.5">
-<label for="typ">Lon:</label>
-<input id="typ" type="text" value="GLOBAL">
-<button id="search_button">Suche</button>
-<button id="export_button">Export</button>
-<button id="logout_button">Abmelden</button>
-<br>
+<input id="lon" step="0.001" type="number" value="9.527">
+<div>
+    <label for="type_select">Art:&nbsp;</label>
+    <select id="type_select">
+        <option value="GLOBAL">GLOBAL</option>
+        <option value="DIRECT">DIRECT</option>
+        <option value="DIFFUSE">DIFFUSE</option>
+    </select>
+</div>
+<div>
+    <button id="search_button">Suche</button>
+    <button id="export_button">Export</button>
+    <button id="logout_button">Abmelden</button>
+</div>
 <table id="records_table"></table>
 </body>
 </html>
