--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -2,16 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Sonneneinstrahlung</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=10" type="text/javascript"></script>
     <script src="js/login.js?version=20" type="text/javascript"></script>
 </head>
 <body>
-Bitte anmelden:
-<br>
-<input id="username" type="text" value="user">
-<input id="password" type="text" value="abc123">
-<button id="login_button">Anmelden</button>
+<header>
+    <p>Sonneneinstrahlung</p>
+</header>
+<div>
+    Bitte anmelden:
+</div>
+<div>
+    <input id="username" type="text" value="user">
+    <input id="password" type="text" value="abc123">
+    <button id="login_button">Anmelden</button>
+</div>
 </body>
 </html>
