--- a/src/main/resources/static/html/accessDenied.html
+++ b/src/main/resources/static/html/accessDenied.html
@@ -10,10 +10,9 @@
 </head>
 <body>
 <header>
-    <p>Sonneneinstrahlung</p>
+    <h2>Sonneneinstrahlung WepApp<h2>
 </header>
-Zugriff verweigert :-(
-<br>
+<p>Zugriff verweigert :-(</p>
 <button id="back_button">Zurück</button>
 </body>
 </html>
