--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-    <p>Sonneneinstrahlung</p>
+    <h2>Sonneneinstrahlung WepApp<h2>
 </header>
 <div>
     Bitte anmelden:
