--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -8,6 +8,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=10" type="text/javascript" type="text/javascript"></script>
     <script src="js/app.js?version=14" type="text/javascript" type="text/javascript"></script>
+    <style>
+        table, th, td {
+          border: 1px solid black;
+        }
+
+    </style>
 </head>
 <body>
 <header>
@@ -29,8 +35,10 @@
     <label for="lat">Lat:&nbsp;</label>
     <input id="lat" step="0.001" type="number" value="51.256">
 </div>
-<label for="lon">Lon:</label>
-<input id="lon" step="0.001" type="number" value="9.527">
+<div>
+    <label for="lon">Lon:</label>
+    <input id="lon" step="0.001" type="number" value="9.527">
+</div>
 <div>
     <label for="type_select">Art:&nbsp;</label>
     <select id="type_select">
@@ -39,15 +47,17 @@
         <option value="DIFFUSE">DIFFUSE</option>
     </select>
 </div>
-
-<button id="search_button">Suche</button>
-<button id="export_button">Export</button>
-<button id="logout_button">Abmelden</button>
-
+<div>
+    <button id="search_button">Suche</button>
+    <button id="export_button">Export</button>
+    <button id="logout_button">Abmelden</button>
+</div>
 <br>
-<h3>Suchergebnis:</h3>
-<div class="result">
-    <div class="grid"></div>
+<div id="result_label">
+</div>
+<div id="result">
+</div>
+<div id="src">
 </div>
 </body>
 </html>
