--- a/src/main/resources/static/html/accessDenied.html
+++ b/src/main/resources/static/html/accessDenied.html
@@ -5,12 +5,12 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Sonneneinstrahlung</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <script src="js/master.js?version=6" type="text/javascript"></script>
-    <script src="js/accessDenied.js?version=3" type="text/javascript"></script>
+    <script src="js/master.js?version=25" type="text/javascript"></script>
+    <script src="js/accessDenied.js?version=25" type="text/javascript"></script>
 </head>
 <body>
 <header>
-    <h2>Sonneneinstrahlung WepApp<h2>
+    <h2>Sonneneinstrahlung WepApp</h2>
 </header>
 <p>Zugriff verweigert :-(</p>
 <button id="back_button">Zurück</button>
