--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -6,8 +6,8 @@
     <title>Sonneneinstrahlung</title>
     <link href="css/style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <script src="js/master.js?version=10" type="text/javascript" type="text/javascript"></script>
-    <script src="js/app.js?version=14" type="text/javascript" type="text/javascript"></script>
+    <script src="js/master.js?version=25" type="text/javascript" type="text/javascript"></script>
+    <script src="js/app.js?version=25" type="text/javascript" type="text/javascript"></script>
     <style>
         table, th, td {
           border: 1px solid black;
@@ -17,8 +17,11 @@
 </head>
 <body>
 <header>
-    <h2>Sonneneinstrahlung WepApp<h2>
+    <h2>Sonneneinstrahlung WepApp</h2>
 </header>
+<div id="rows">
+
+</div>
 <form autocomplete="off">
     <div class="autocomplete">
         <label for="start_date">Von:</label>
