--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -5,12 +5,12 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Sonneneinstrahlung</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <script src="js/master.js?version=10" type="text/javascript"></script>
-    <script src="js/login.js?version=20" type="text/javascript"></script>
+    <script src="js/master.js?version=25" type="text/javascript"></script>
+    <script src="js/login.js?version=25" type="text/javascript"></script>
 </head>
 <body>
 <header>
-    <h2>Sonneneinstrahlung WepApp<h2>
+    <h2>Sonneneinstrahlung WepApp</h2>
 </header>
 <div>
     Bitte anmelden:
