--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -11,6 +11,7 @@
 <body>
 <header>
     <h2>Sonneneinstrahlung WepApp</h2>
+    <h4>Kontakt: julian.osmer@outlook.de</h4>
 </header>
 <div>
     Bitte anmelden:
