--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -18,6 +18,7 @@
 <body>
 <header>
     <h2>Sonneneinstrahlung WepApp</h2>
+    <h4>Kontakt: julian.osmer@outlook.de</h4>
 </header>
 <div id="rows">
 
