--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -5,9 +5,12 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <title>Sonneneinstrahlung</title>
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/style.css" type="text/css"/>
+        <link rel="stylesheet" href="../css/style.css" type="text/css">
+        <link rel="stylesheet" href="../css/style.css" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-        <script src="js/master.js?version=25" type="text/javascript" type="text/javascript"></script>
-        <script src="js/app.js?version=25" type="text/javascript" type="text/javascript"></script>
+        <script src="js/master.js?version=25" type="text/javascript"></script>
+        <script src="js/app.js?version=25" type="text/javascript"></script>
         <style>
             table, th, td {
                 border: 1px solid black;
