--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Sonneneinstrahlung</title>
-    <link href="css/style.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet" type="text/css"/>
-    <link href="../css/style.css" rel="stylesheet" type="text/css">
-    <link href="../css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=25" type="text/javascript"></script>
-    <script src="js/app.js?version=29" type="text/javascript"></script>
+    <script src="js/app.js?version=30" type="text/javascript"></script>
     <style>
             table, th, td {
                 border: 1px solid black;
             }
+
+
+
+
+
     </style>
 </head>
 <body>
-<header>
-    <h2>Sonneneinstrahlung WepApp</h2>
-    <h4>Kontakt: julian.osmer@outlook.de</h4>
-</header>
-<div id="rows">
-
+<div>
+    <b>[Sonneneinstrahlung WepApp] </b>
+    <button id="logout_button">Abmelden</button>
 </div>
+<br>
 <form autocomplete="off">
     <div class="autocomplete">
         <label for="start_date"><b>Von:</b></label>
@@ -39,7 +39,7 @@
 </form>
 <br>
 <div>
-    <label><b>Dezimalgrad (WGS84)</b></label>
+    <label><b>Dezimalgrad</b> (WGS84)</label>
 </div>
 <div>
     <label for="lat"><b>Lat:&nbsp;</b></label>
@@ -59,10 +59,16 @@
     </select>
 </div>
 <br>
+<div id="rows">
+</div>
+<br>
+<div>
+    <b>Kontakt: </b>julian.osmer@outlook.de
+</div>
+<br>
 <div>
     <button id="search_button">Suche</button>
     <button id="export_button">Export</button>
-    <button id="logout_button">Abmelden</button>
 </div>
 <br>
 <div id="result">
