--- a/src/main/resources/static/html/accessDenied.html
+++ b/src/main/resources/static/html/accessDenied.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta content="width=device-width, initial-scale=1" name="viewport">
-        <title>Sonneneinstrahlung</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-        <script src="js/master.js?version=25" type="text/javascript"></script>
-        <script src="js/accessDenied.js?version=25" type="text/javascript"></script>
-    </head>
-    <body>
-        <header>
-            <h2>Sonneneinstrahlung WepApp</h2>
-            <h4>Kontakt: julian.osmer@outlook.de</h4>
-        </header>
-        <p>Zugriff verweigert :-(</p>
-        <button id="back_button">Zurück</button>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>Sonnenkarte Deutschland</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <script src="js/master.js?version=25" type="text/javascript"></script>
+    <script src="js/accessDenied.js?version=25" type="text/javascript"></script>
+</head>
+<body>
+<div>
+    <b>[Sonnenkarte Deutschland] </b>
+</div>
+<p>Zugriff verweigert :-(</p>
+<button id="back_button">Zurück</button>
+</body>
 </html>
