--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Sonneneinstrahlung</title>
+    <title>Sonnenkarte Deutschland</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=25" type="text/javascript"></script>
@@ -17,11 +17,12 @@
 
 
 
+
     </style>
 </head>
 <body>
 <div>
-    <b>[Sonneneinstrahlung WepApp] </b>
+    <b>[Sonnenkarte Deutschland] </b>
     <button id="logout_button">Abmelden</button>
 </div>
 <br>
