--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -31,7 +31,7 @@
 <form autocomplete="off">
     <div class="autocomplete">
         <label for="end_date"><b>Bis:&nbsp;</b></label>
-        <input id="end_date" type="text" value="1991-12">
+        <input id="end_date" type="text">
     </div>
 </form>
 <br>
