--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -25,7 +25,7 @@
 <form autocomplete="off">
     <div class="autocomplete">
         <label for="start_date"><b>Von:</b></label>
-        <input id="start_date" type="text" value="1991-01">
+        <input id="start_date" type="text">
     </div>
 </form>
 <form autocomplete="off">
