--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Sonnenkarte Deutschland</title>
+    <title>Sonneneinstrahlung</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=25" type="text/javascript"></script>
@@ -11,14 +11,15 @@
     <style>
         table, th, td {
             border: 1px solid black;
+            border-collapse: collapse;
         }
-
-
     </style>
 </head>
-<body>
+<body style="background-color:whitesmoke">
 <div>
-    <b>[Sonnenkarte Deutschland] </b>
+    <h2>Sonneneinstrahlung WebApp</h2>
+</div>
+<div>
     <button id="logout_button">Abmelden</button>
 </div>
 <br>
@@ -57,10 +58,6 @@
 </div>
 <br>
 <div id="rows">
-</div>
-<br>
-<div>
-    <b>Kontakt: </b>julian.osmer@outlook.de
 </div>
 <br>
 <div>
