--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Sonneneinstrahlung</title>
+    <title>SonneneinstrahlungDB</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=25" type="text/javascript"></script>
@@ -17,7 +17,7 @@
 </head>
 <body style="background-color:whitesmoke">
 <div>
-    <h2>Sonneneinstrahlung WebApp</h2>
+    <h2>SonneneinstrahlungDB</h2>
 </div>
 <div>
     <button id="logout_button">Abmelden</button>
