--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -7,14 +7,35 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=50" type="text/javascript"></script>
     <script src="js/login.js?version=50" type="text/javascript"></script>
+    <style>
+        input {
+            margin: 2px 0;
+            width: 150px;
+        }
+
+        button {
+            margin: 2px 0;
+            width: 154px;
+        }
+    </style>
 </head>
 <body style="background-color:whitesmoke">
 <div>
     <h2>SonneneinstrahlungDB</h2>
 </div>
 <div>
+    <label for="username"><b>Benutzername:</b></label>
+</div>
+<div>
     <input id="username" type="text" value="user">
+</div>
+<div>
+    <label for="password"><b>Passwort:</b></label>
+</div>
+<div>
     <input id="password" type="text" value="abc123">
+</div>
+<div>
     <button id="login_button">Anmelden</button>
 </div>
 </body>
