--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>SonneneinstrahlungDB</title>
+    <title>sonneneinstrahlungDB</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=50" type="text/javascript"></script>
     <script src="js/login.js?version=50" type="text/javascript"></script>
@@ -21,7 +21,7 @@
 </head>
 <body style="background-color:whitesmoke">
 <div>
-    <h2>SonneneinstrahlungDB</h2>
+    <h2>sonneneinstrahlungDB</h2>
 </div>
 <div>
     <label for="username"><b>Benutzername:</b></label>
