--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>sonneneinstrahlungDB</title>
+    <title>Sonneneinstrahlung-DB</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=25" type="text/javascript"></script>
@@ -17,47 +17,44 @@
 
         input {
             margin: 3px 0;
-            width: 150px;
+            width: 155px;
             height: 25px;
             background-color: white;
+            border: none;
         }
 
         button {
             height: 25px;
             width: 91px;
-            background-color: white;
-            border: 1px solid darkgray;
+            background-color: gold;
+            border: none;
         }
 
         select {
             height: 25px;
-            width: 150px;
+            width: 155px;
             background-color: white;
+            border: none;
         }
     </style>
 </head>
 <body style="background-color:whitesmoke">
-<div style="background-color:white;width:190px;height:25px;text-align: center;vertical-align: middle;line-height:25px;">
-    <h3>sonneneinstrahlungDB</h3>
+<div>
+    <button id="logout_button" style="width: 187px">Abmelden</button>
 </div>
 <br>
 <div id="rows">
 </div>
-<br>
-<div>
-    <button id="logout_button">Abmelden</button>
-</div>
-<br>
 <form autocomplete="off">
     <div class="autocomplete">
-        <label for="start_date"><b>Von:</b></label>
+        <label for="start_date" style="margin-left: 1px;"><b>Von</b></label>
         <input id="start_date" type="text">
     </div>
 </form>
 <form autocomplete="off">
     <div class="autocomplete">
-        <label for="end_date"><b>Bis:</b></label>
-        <input id="end_date" style="margin-left: 4px;" type="text">
+        <label for="end_date"><b>Bis</b></label>
+        <input id="end_date" style="margin-left: 7px;" type="text">
     </div>
 </form>
 <br>
@@ -65,16 +62,16 @@
     <label><b>Dezimalgrad</b> (WGS84)</label>
 </div>
 <div>
-    <label for="lat"><b>Lat:</b></label>
+    <label for="lat"><b>Lat</b></label>
     <input id="lat" step="0.000001" style="margin-left: 4px;" type="number" value="52.519981">
 </div>
 <div>
-    <label for="lon"><b>Lon:</b></label>
+    <label for="lon"><b>Lon</b></label>
     <input id="lon" step="0.000001" type="number" value="13.373108">
 </div>
 <br>
 <div>
-    <label for="type_select"><b>Art:</b></label>
+    <label for="type_select"><b>Art</b></label>
     <select id="type_select" style="margin-left: 4px;">
         <option value="GLOBAL">GLOBAL</option>
         <option value="DIRECT">DIRECT</option>
