--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -3,37 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>sonneneinstrahlungDB</title>
+    <title>Sonneneinstrahlung-DB</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=50" type="text/javascript"></script>
     <script src="js/login.js?version=50" type="text/javascript"></script>
     <style>
         input {
-            margin: 2px 0;
-            width: 150px;
+            height: 25px;
+            margin: 3px 0;
+            width: 190px;
+            border: none;
         }
 
         button {
-            margin: 2px 0;
-            width: 154px;
+            height: 30px;
+            margin: 5px 0;
+            width: 190px;
+            background-color: gold;
+            border: none;
         }
     </style>
 </head>
 <body style="background-color:whitesmoke">
 <div>
-    <h2>sonneneinstrahlungDB</h2>
+    <h3>Sonneneinstrahlung-DB</h3>
 </div>
 <div>
-    <label for="username"><b>Benutzername:</b></label>
+    <label for="username">Benutzername</label>
 </div>
 <div>
-    <input id="username" type="text" value="user">
+    <input id="username" type="text">
 </div>
 <div>
-    <label for="password"><b>Passwort:</b></label>
+    <label for="password">Passwort</label>
 </div>
 <div>
-    <input id="password" type="text" value="abc123">
+    <input id="password" type="password">
 </div>
 <div>
     <button id="login_button">Anmelden</button>
