--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -6,24 +6,29 @@
     <title>Sonneneinstrahlung-DB</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet"
+          type="text/css"/>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=25" type="text/javascript"></script>
     <script src="js/app.js?version=30" type="text/javascript"></script>
     <style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-            background-color: white;
+        .grid-container {
+            display: grid;
+            grid-template-columns: 207px 207px 207px;
         }
 
         input {
             margin: 3px 0;
             width: 155px;
             height: 25px;
-            background-color: white;
+            background-color: whitesmoke;
             border: none;
         }
 
         button {
+            margin: 3px 0;
             height: 25px;
             width: 91px;
             background-color: gold;
@@ -31,60 +36,72 @@
         }
 
         select {
+            margin: 3px 0;
             height: 25px;
             width: 155px;
-            background-color: white;
+            background-color: whitesmoke;
             border: none;
         }
     </style>
 </head>
-<body style="background-color:whitesmoke">
+<body style="background-color:white">
 <div>
     <button id="logout_button" style="width: 187px">Abmelden</button>
 </div>
 <br>
-<div id="rows">
-</div>
-<form autocomplete="off">
-    <div class="autocomplete">
-        <label for="start_date" style="margin-left: 1px;"><b>Von</b></label>
-        <input id="start_date" type="text">
+<div class="grid-container">
+    <div class="grid-item">
+        <div id="rows">
+        </div>
+        <form autocomplete="off">
+            <div class="autocomplete">
+                <label for="start_date" style="margin-left: 1px;"><b>Von</b></label>
+                <input id="start_date" type="text">
+            </div>
+        </form>
+        <form autocomplete="off">
+            <div class="autocomplete">
+                <label for="end_date"><b>Bis</b></label>
+                <input id="end_date" style="margin-left: 7px;" type="text">
+            </div>
+        </form>
     </div>
-</form>
-<form autocomplete="off">
-    <div class="autocomplete">
-        <label for="end_date"><b>Bis</b></label>
-        <input id="end_date" style="margin-left: 7px;" type="text">
+    <div class="grid-item">
+        <div>
+            <label><b>Dezimalgrad</b> (WGS84)</label>
+        </div>
+        <div>
+            <label for="lat"><b>Lat</b></label>
+            <input id="lat" step="0.000001" style="margin-left: 4px;" type="number" value="52.519981">
+        </div>
+        <div>
+            <label for="lon"><b>Lon</b></label>
+            <input id="lon" step="0.000001" type="number" value="13.373108">
+        </div>
+
     </div>
-</form>
+    <div class="grid-item">
+        <div>
+            <label><b>Quelle:</b> DWD CDC</label>
+        </div>
+        <div>
+            <label for="type_select"><b>Art</b></label>
+            <select id="type_select" style="margin-left: 4px;">
+                <option value="GLOBAL">GLOBAL</option>
+                <option value="DIRECT">DIRECT</option>
+                <option value="DIFFUSE">DIFFUSE</option>
+            </select>
+        </div>
+        <div>
+            <button id="search_button">Suche</button>
+            <button id="export_button">Export</button>
+        </div>
+    </div>
+</div>
+
+
 <br>
-<div>
-    <label><b>Dezimalgrad</b> (WGS84)</label>
-</div>
-<div>
-    <label for="lat"><b>Lat</b></label>
-    <input id="lat" step="0.000001" style="margin-left: 4px;" type="number" value="52.519981">
-</div>
-<div>
-    <label for="lon"><b>Lon</b></label>
-    <input id="lon" step="0.000001" type="number" value="13.373108">
-</div>
-<br>
-<div>
-    <label for="type_select"><b>Art</b></label>
-    <select id="type_select" style="margin-left: 4px;">
-        <option value="GLOBAL">GLOBAL</option>
-        <option value="DIRECT">DIRECT</option>
-        <option value="DIFFUSE">DIFFUSE</option>
-    </select>
-</div>
-<br>
-<div>
-    <button id="search_button">Suche</button>
-    <button id="export_button">Export</button>
-</div>
-<br>
-<div id="result">
+<div id="jsGrid">
 </div>
 </body>
 </html>
