--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -24,18 +24,18 @@
         }
     </style>
 </head>
-<body style="background-color:whitesmoke">
+<body style="background-color:white">
 <div>
     <h3>Sonneneinstrahlung-DB</h3>
 </div>
 <div>
-    <label for="username">Benutzername</label>
+    <label for="username"><b>Benutzername</b></label>
 </div>
 <div>
     <input id="username" type="text">
 </div>
 <div>
-    <label for="password">Passwort</label>
+    <label for="password"><b>Passwort</b></label>
 </div>
 <div>
     <input id="password" type="password">
