--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Sonneneinstrahlung-DB</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/app.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet"
@@ -13,38 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=25" type="text/javascript"></script>
     <script src="js/app.js?version=30" type="text/javascript"></script>
-    <style>
-        .grid-container {
-            display: grid;
-            grid-template-columns: 216px 216px 216px;
-        }
-
-        input {
-            margin: 3px 0;
-            width: 155px;
-            height: 25px;
-            background-color: whitesmoke;
-            border: none;
-        }
-
-        button {
-            margin: 3px 0;
-            height: 25px;
-            width: 91px;
-            background-color: gold;
-            border: none;
-        }
-
-        select {
-            margin: 3px 0;
-            height: 25px;
-            width: 155px;
-            background-color: whitesmoke;
-            border: none;
-        }
-    </style>
 </head>
-<body style="background-color:white">
+<body>
 <div>
     <button id="logout_button" style="width: 187px">Abmelden</button>
 </div>
