--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -4,27 +4,12 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Sonneneinstrahlung-DB</title>
+    <link href="/css/login.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=50" type="text/javascript"></script>
     <script src="js/login.js?version=50" type="text/javascript"></script>
-    <style>
-        input {
-            height: 25px;
-            margin: 3px 0;
-            width: 190px;
-            border: none;
-        }
-
-        button {
-            height: 30px;
-            margin: 5px 0;
-            width: 190px;
-            background-color: gold;
-            border: none;
-        }
-    </style>
 </head>
-<body style="background-color:white">
+<body>
 <div>
     <h3>Sonneneinstrahlung-DB</h3>
 </div>
