--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Sonneneinstrahlung-DB</title>
+    <title>&#10039;sonneneinstrahlungDB</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css"/>
     <link href="/css/app.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
@@ -16,8 +16,14 @@
     <script src="js/app.js?version=30" type="text/javascript"></script>
 </head>
 <body>
+<div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
+    &#10039;sonneneinstrahlungDB
+    <button id="logout_button"
+            style="width: 80px;height:35px;background-color: transparent;border:none;margin-left: 290px;">Abmelden
+    </button>
+</div>
 <div>
-    <button id="logout_button" style="width: 187px">Abmelden</button>
+
 </div>
 <br>
 <div class="grid-container">
@@ -53,7 +59,7 @@
     </div>
     <div class="grid-item">
         <div>
-            <label><b>Quelle:</b> DWD CDC</label>
+            <label><b>Quelle:</b>&nbsp;DWD&copy;&nbsp;CDC</label>
         </div>
         <div>
             <label for="type_select"><b>Art</b></label>
