--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Sonneneinstrahlung-DB</title>
+    <title>&#10039;sonneneinstrahlungDB</title>
     <link href="/css/login.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=50" type="text/javascript"></script>
     <script src="js/login.js?version=50" type="text/javascript"></script>
 </head>
 <body>
-<div>
-    <h3>Sonneneinstrahlung-DB</h3>
+<div style="background-color: whitesmoke;width:247px;height:35px;font-size:18pt;">
+    &#10039;sonneneinstrahlungDB
 </div>
 <div>
     <label for="username"><b>Benutzername</b></label>
