--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -28,5 +28,8 @@
 <div>
     <button id="login_button">Anmelden</button>
 </div>
+<div>
+    <button id="create_button">Erstellen</button>
+</div>
 </body>
 </html>
