--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -29,7 +29,7 @@
     <button id="login_button">Anmelden</button>
 </div>
 <div>
-    <button id="create_button">Erstellen</button>
+    <button id="save_button">Erstellen</button>
 </div>
 </body>
 </html>
