--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -16,6 +16,17 @@
     <script src="js/app.js?version=30" type="text/javascript"></script>
 </head>
 <body>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
+      target="_top">
+    <input name="cmd" type="hidden" value="_s-xclick"/>
+    <input name="hosted_button_id" type="hidden" value="QEUV4XFQ7GBW4"/>
+    <input alt="Spenden mit dem PayPal-Button" border="0"
+           name="submit" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif"
+           style="height: 47px;width: 126px;background-color: whitesmoke;"
+           title="PayPal - The safer, easier way to pay online!" type="image"/>
+    <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
+</form>
+<br>
 <div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
     &#10039;sonneneinstrahlungDB
     <button id="logout_button"
@@ -23,7 +34,6 @@
     </button>
 </div>
 <div>
-
 </div>
 <br>
 <div class="grid-container">
