--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -10,9 +10,21 @@
     <script src="js/login.js?version=50" type="text/javascript"></script>
 </head>
 <body>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:247px;background-color: whitesmoke;"
+      target="_top">
+    <input name="cmd" type="hidden" value="_s-xclick"/>
+    <input name="hosted_button_id" type="hidden" value="QEUV4XFQ7GBW4"/>
+    <input alt="Spenden mit dem PayPal-Button" border="0"
+           name="submit" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif"
+           style="height: 47px;width: 126px;background-color: whitesmoke;"
+           title="PayPal - The safer, easier way to pay online!" type="image"/>
+    <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
+</form>
+<br>
 <div style="background-color: whitesmoke;width:247px;height:35px;font-size:18pt;">
     &#10039;sonneneinstrahlungDB
 </div>
+<br>
 <div>
     <label for="username"><b>Benutzername</b></label>
 </div>
