--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -21,18 +21,18 @@
     <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
 </form>
 <br>
-<div style="background-color: whitesmoke;width:247px;height:35px;font-size:18pt;">
-    &#10039;sonneneinstrahlungDB
+<div style="background-color: whitesmoke;width:247px;height:35px;font-size:17pt;">
+    &#10039;|<i>sonneneinstrahlung</i>DB
 </div>
 <br>
 <div>
-    <label for="username"><b>Benutzername</b></label>
+    <label for="username">Benutzername</label>
 </div>
 <div>
     <input id="username" type="text">
 </div>
 <div>
-    <label for="password"><b>Passwort</b></label>
+    <label for="password">Passwort</label>
 </div>
 <div>
     <input id="password" type="password">
