--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -28,9 +28,9 @@
 </form>
 <br>
 <div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
-    &#10039;sonneneinstrahlungDB
+    &#10039;|<i>sonneneinstrahlung</i>DB
     <button id="logout_button"
-            style="width: 80px;height:35px;background-color: transparent;border:none;margin-left: 290px;">Abmelden
+            style="width: 80px;height:35px;background-color: transparent;border:none;margin-left: 285px;">Abmelden
     </button>
 </div>
 <div>
