--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>&#10039;|sonneneinstrahlungDB</title>
-    <link href="/css/style.css" rel="stylesheet" type="text/css"/>
-    <link href="/css/app.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/style.css?version=60" rel="stylesheet" type="text/css"/>
+    <link href="/css/app.css?version=60" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet"
           type="text/css"/>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
-    <script src="js/master.js?version=25" type="text/javascript"></script>
-    <script src="js/app.js?version=30" type="text/javascript"></script>
+    <script src="js/master.js?version=60" type="text/javascript"></script>
+    <script src="js/app.js?version=60" type="text/javascript"></script>
 </head>
 <body>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
