--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>&#10039;|sonneneinstrahlungDB</title>
-    <link href="/css/login.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/login.css?version=60" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-    <script src="js/master.js?version=50" type="text/javascript"></script>
-    <script src="js/login.js?version=50" type="text/javascript"></script>
+    <script src="js/master.js?version=60" type="text/javascript"></script>
+    <script src="js/login.js?version=60" type="text/javascript"></script>
 </head>
 <body>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:247px;background-color: whitesmoke;"
