--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>&#10039;|sonneneinstrahlungDB</title>
+    <title>&#10039;sonneneinstrahlungDB</title>
     <link href="/css/login.css?version=60" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=60" type="text/javascript"></script>
@@ -21,8 +21,8 @@
     <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
 </form>
 <br>
-<div style="background-color: whitesmoke;width:247px;height:35px;font-size:17pt;">
-    &#10039;|<i>sonneneinstrahlung</i>DB
+<div style="background-color: whitesmoke;width:247px;height:35px;font-size:18pt;">
+    &#10039;sonneneinstrahlungDB
 </div>
 <br>
 <div>
