--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>&#10039;|sonneneinstrahlungDB</title>
+    <title>&#10039;sonneneinstrahlungDB</title>
     <link href="/css/style.css?version=60" rel="stylesheet" type="text/css"/>
     <link href="/css/app.css?version=60" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
@@ -28,7 +28,7 @@
 </form>
 <br>
 <div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
-    &#10039;|<i>sonneneinstrahlung</i>DB
+    &#10039;sonneneinstrahlungDB
     <button id="logout_button"
             style="width: 80px;height:35px;background-color: transparent;border:none;margin-left: 285px;">Abmelden
     </button>
