--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -30,7 +30,7 @@
 <div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
     &#10039;sonneneinstrahlungDB
     <button id="logout_button"
-            style="width: 80px;height:35px;background-color: transparent;border:none;margin-left: 285px;">Abmelden
+            style="width: 80px;height:35px;background-color: transparent;border:none;">Abmelden
     </button>
 </div>
 <div>
