--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -21,8 +21,7 @@
     <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
 </form>
 <br>
-<div style="background-color: whitesmoke;width:247px;height:35px;font-size:18pt;">
-    &#10039;sonneneinstrahlungDB
+<div style="background-color: whitesmoke;width:247px;height:35px;font-size:17pt;">
 </div>
 <br>
 <div>
@@ -36,6 +35,9 @@
 </div>
 <div>
     <input id="password" type="password">
+</div>
+<div id="alert">
+    <b>&nbsp;</b>
 </div>
 <div>
     <button id="login_button">Anmelden</button>
