--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -22,6 +22,7 @@
 </form>
 <br>
 <div style="background-color: whitesmoke;width:247px;height:35px;font-size:17pt;">
+    &#10039;sonneneinstrahlungDB
 </div>
 <br>
 <div>
