--- a/src/main/resources/static/html/app.html
+++ b/src/main/resources/static/html/app.html
@@ -33,7 +33,10 @@
             style="width: 80px;height:35px;background-color: transparent;border:none;">Abmelden
     </button>
 </div>
+<br>
 <div>
+    <button id="app_button" style="width:308px;">Einstrahlung</button>
+    <button id="calc_button" style="width:308px;">Umrechner</button>
 </div>
 <br>
 <div class="grid-container">
