--- a/src/main/resources/static/html/calc.html
+++ b/src/main/resources/static/html/calc.html
@@ -2,9 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>&#10039;sonneneinstrahlungDB</title>
+    <link href="/css/style.css?version=60" rel="stylesheet" type="text/css"/>
+    <link href="/css/app.css?version=60" rel="stylesheet" type="text/css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet"
+          type="text/css"/>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
+    <script src="js/master.js?version=60" type="text/javascript"></script>
+    <script src="js/calc.js?version=60" type="text/javascript"></script>
 </head>
 <body>
-
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
+      target="_top">
+    <input name="cmd" type="hidden" value="_s-xclick"/>
+    <input name="hosted_button_id" type="hidden" value="QEUV4XFQ7GBW4"/>
+    <input alt="Spenden mit dem PayPal-Button" border="0"
+           name="submit" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif"
+           style="height: 47px;width: 126px;background-color: whitesmoke;"
+           title="PayPal - The safer, easier way to pay online!" type="image"/>
+    <img alt="" border="0" height="1" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1"/>
+</form>
+<br>
+<div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
+    &#10039;sonneneinstrahlungDB
+    <button id="logout_button"
+            style="width: 80px;height:35px;background-color: transparent;border:none;">Abmelden
+    </button>
+</div>
+<br>
+<div>
+    <button id="app_button" style="width:308px;">Einstrahlung</button>
+    <button id="calc_button" style="width:308px;">Umrechner</button>
+</div>
+<div id="jsGrid">
+</div>
 </body>
 </html>
