--- a/src/main/resources/static/html/calc.html
+++ b/src/main/resources/static/html/calc.html
@@ -35,7 +35,7 @@
 </div>
 <br>
 <div>
-    <button id="app_button" style="width:308px;">Einstrahlung</button>
+    <button id="radi_button" style="width:308px;">Einstrahlung</button>
     <button id="calc_button" style="width:308px;">Umrechner</button>
 </div>
 <div id="jsGrid">
