--- a/src/main/resources/static/html/radi.html
+++ b/src/main/resources/static/html/radi.html
@@ -13,7 +13,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" type="text/javascript"></script>
     <script src="js/master.js?version=60" type="text/javascript"></script>
-    <script src="js/app.js?version=60" type="text/javascript"></script>
+    <script src="js/radi.js?version=60" type="text/javascript"></script>
 </head>
 <body>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="width:620px;background-color: whitesmoke;"
@@ -35,7 +35,7 @@
 </div>
 <br>
 <div>
-    <button id="app_button" style="width:308px;">Einstrahlung</button>
+    <button id="radi_button" style="width:308px;">Einstrahlung</button>
     <button id="calc_button" style="width:308px;">Umrechner</button>
 </div>
 <br>
