--- a/src/main/resources/static/html/calc.html
+++ b/src/main/resources/static/html/calc.html
@@ -45,11 +45,11 @@
             <label><b>Ausrichtung u. Neigung</b></label>
         </div>
         <div>
-            <label for="alignment"><b>&alpha;s</b></label>
+            <label for="alignment"><b>&alpha;e</b></label>
             <input id="alignment" style="margin-left: 6px;" type="number" value="180">
         </div>
         <div>
-            <label for="tilt"><b>&gamma;s</b></label>
+            <label for="tilt"><b>&gamma;e</b></label>
             <input id="tilt" style="margin-left: 7px;" type="number" value="30">
         </div>
     </div>
