--- a/src/main/resources/static/html/irr.html
+++ b/src/main/resources/static/html/irr.html
@@ -32,8 +32,8 @@
 </div>
 <br>
 <div>
-    <button id="radi_button" style="width:308px;">Einstrahlung</button>
-    <button id="calc_button" style="width:308px;">Umrechner</button>
+    <button id="rad_button" style="width:308px;">Einstrahlung</button>
+    <button id="irr_button" style="width:308px;">Umrechner</button>
 </div>
 <br>
 <div class="grid-container">
@@ -74,8 +74,8 @@
             </div>
         </form>
         <div>
-            <button id="calculation_button">Umrechnen</button>
-            <button id="calculation_export_button">Export</button>
+            <button id="calc_irr_button">Umrechnen</button>
+            <button id="calc_irr_export_button">Export</button>
         </div>
     </div>
 </div>
