--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -44,7 +44,7 @@
     <button id="login_button">Anmelden</button>
 </div>
 <div>
-    <button id="save_button">Erstellen</button>
+    <button id="create_button">Erstellen</button>
 </div>
 </body>
 </html>
