--- a/src/main/resources/static/html/rad.html
+++ b/src/main/resources/static/html/rad.html
@@ -33,8 +33,8 @@
 </div>
 <br>
 <div>
-    <button id="radi_button" style="width:308px;">Einstrahlung</button>
-    <button id="calc_button" style="width:308px;">Umrechner</button>
+    <button id="rad_button" style="width:308px;">Einstrahlung</button>
+    <button id="irr_button" style="width:308px;">Umrechner</button>
 </div>
 <br>
 <div class="grid-container">
