--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -10,9 +10,12 @@
     <script src="js/login.js?version=2001" type="text/javascript"></script>
 </head>
 <body>
-<div style="background-color: whitesmoke;width:247px;height:55px;font-size:12pt;">
+<div style="background-color: whitesmoke;width:247px;height:105px;font-size:11pt;">
     Quellcode:
+    <br>
     <a href="https://github.com/fantasy2113/solar-radiation-application">https://github.com/fantasy2113/solar-radiation-application</a>
+    <br><br>
+    <a href="https://github.com/fantasy2113/dwdcdc-library">https://github.com/fantasy2113/dwdcdc-library</a>
 </div>
 <br>
 <div style="background-color: whitesmoke;width:247px;height:35px;font-size:15pt;">
