--- a/src/main/resources/static/html/rad.html
+++ b/src/main/resources/static/html/rad.html
@@ -14,9 +14,12 @@
     <script src="js/rad.js?version=3000" type="text/javascript"></script>
 </head>
 <body>
-<div style="background-color: whitesmoke;width:620px;height:35px;font-size:16pt;">
+<div style="background-color: whitesmoke;width:620px;height:55px;font-size:16pt;">
     Quellcode:
     <a href="https://github.com/fantasy2113/solar-radiation-application">https://github.com/fantasy2113/solar-radiation-application</a>
+    <br>
+    Quellcode:
+    <a href="https://github.com/fantasy2113/dwdcdc-library">https://github.com/fantasy2113/dwdcdc-library</a>
 </div>
 <br>
 <div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
