--- a/src/main/resources/static/html/irr.html
+++ b/src/main/resources/static/html/irr.html
@@ -16,10 +16,10 @@
 <body>
 <div style="background-color: whitesmoke;width:620px;height:55px;font-size:16pt;">
     Quellcode:
-    <a href="https://github.com/fantasy2113/solar-radiation-application">https://github.com/fantasy2113/solar-radiation-application</a>
+    <a href="https://github.com/fantasy2113/solar-radiation-application">solar-radiation-application</a>
     <br>
     Quellcode:
-    <a href="https://github.com/fantasy2113/dwdcdc-library">https://github.com/fantasy2113/dwdcdc-library</a>
+    <a href="https://github.com/fantasy2113/dwdcdc-library">dwdcdc-library</a>
 </div>
 <br>
 <div style="background-color: whitesmoke;width:620px;height:35px;font-size:18pt;">
