--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -13,9 +13,9 @@
 <div style="background-color: whitesmoke;width:247px;height:105px;font-size:11pt;">
     Quellcode:
     <br>
-    <a href="https://github.com/fantasy2113/solar-radiation-application">https://github.com/fantasy2113/solar-radiation-application</a>
+    <a href="https://github.com/fantasy2113/solar-radiation-application">solar-radiation-application</a>
     <br><br>
-    <a href="https://github.com/fantasy2113/dwdcdc-library">https://github.com/fantasy2113/dwdcdc-library</a>
+    <a href="https://github.com/fantasy2113/dwdcdc-library">dwdcdc-library</a>
 </div>
 <br>
 <div style="background-color: whitesmoke;width:247px;height:35px;font-size:15pt;">
