--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -34,9 +34,7 @@
 <div>
     <input id="password" type="password">
 </div>
-<div id="alert">
-    <b>&nbsp;</b>
-</div>
+<b id="alert"></b>
 <div>
     <button id="login_button">Anmelden</button>
 </div>
