--- a/src/main/resources/static/html/rad.html
+++ b/src/main/resources/static/html/rad.html
@@ -37,6 +37,7 @@
 <div class="grid-container">
     <div class="grid-item">
         <div id="rows">
+            <b>Datenanzahl:&nbsp;</b>
         </div>
         <form autocomplete="off">
             <div class="autocomplete">
