--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -34,7 +34,7 @@
 <div>
     <input id="password" type="password">
 </div>
-<b id="alert"></b>
+<b id="alert">&nbsp;</b>
 <div>
     <button id="login_button">Anmelden</button>
 </div>
