--- a/src/main/resources/static/html/irr.html
+++ b/src/main/resources/static/html/irr.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 <div style="background-color: whitesmoke;width:620px;height:55px;font-size:16pt;">
+    <b>Aus Kostengründen erfolgt im Moment keine Datenausgabe!</b>
+    <br>
     Quellcode:
     <a href="https://github.com/fantasy2113/solar-radiation-application">solar-radiation-application</a>
     <br>
